# magicrows

./: .env.example  .gitignore  .windsurfrules  README.md  Tasks EU15_enriched_novelty_20250428_092905.csv  Tasks EU15_enriched_tasks_20250428_092905.csv  forge.config.js  package-lock.json  package.json  pyproject.toml  request_inspector.py  tailwind.config.js  test_enrichment_script.py  test_openai_schema.py  test_text_format.py  typescript_conversion_guide.md  vite.config.ts  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts  vitest.config.ts
magicrowspy/: README.md  __init__.py
magicrowspy/config/: __init__.py  loaders.py  models.py
magicrowspy/core/: __init__.py  enricher.py  prompt_builder.py  provider_handler.py
magicrowspy/presets/: index.ts  sentiment_analysis_preset.ts
magicrowspy/presets/ISCO/: ISCONoveltyPerplexity_preset.ts  ISCONovelty_preset.ts  ISCOTasksPerplexity_preset.ts  ISCOTasks_preset.ts  startup_ideas.ts
magicrowspy/scripts_examples/: isco_enrichment_script.py  simple_enrichment_script.py  test_enrichment_script.py
magicrowspy/utils/: schema_generator.py
prd/: ai_enrichment_external_presets.md  ai_enrichment_external_presets_tasks.md  ai_enrichment_feature.md  ai_enrichment_python_package.md  ai_enrichment_tasks.md  design-rationale.md  duckdb-node-communication.md  feasibility-analysis.md  full-action-plan.md  quick-win-strategy.md
scripts/: create-icons.js  test-packaging.js
src/: test-runner.ts  vitest.setup.ts
src/main/: electronStoreCompat.cjs  index.ts  main.ts  preload.ts  run-secure-storage-test.ts  secureStorage.ts  simpleFileStorage.cjs  test-secure-storage.ts
src/renderer/: App.tsx  index.html  index.tsx
src/renderer/components/: CsvUpload.tsx  Logo.tsx
src/renderer/hooks/: useAIEnrichment.ts
(+48 files in other folders)
