[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "magicrowspy"
version = "0.1.0"
description = "Python library for AI-driven data enrichment based on TypeScript configurations."
authors = [
    { name="Victor Anozie", email="victor@rowvana.com" },
]
license = "MIT"
requires-python = ">=3.9,<4.0"
dependencies = [
    "pydantic>=2.7.1,<3.0.0",
    "jsonschema>=4.23.0,<5.0.0",
    "tenacity>=8.5.0,<9.0.0",
    "pandas>=2.2.2,<3.0.0",
    "jinja2>=3.1.4,<4.0.0",
]

[project.optional-dependencies]
polars = ["polars>=0.20.23,<1.0.0"]
openai = ["openai>=1.25.1,<2.0.0"]
all_dataframes = ["magicrowspy[polars]"] # pandas is now core
all_providers = ["magicrowspy[openai]"]
all = ["magicrowspy[all_dataframes, all_providers]"]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.5.0,<1.0.0", # Combines flake8, isort, etc.
    "black>=24.4.2,<25.0.0",
    "mypy>=1.11.0,<2.0.0",
    # Add other dev tools if needed, like pytest-cov
]

[project.urls]
"Homepage" = "https://github.com/yourusername/magicrowspy" # Replace with actual URL

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "D", "UP", "B", "A", "COM", "LOG", "T20", "PT", "Q", "RET", "SIM", "TID", "ARG", "PTH", "PD"] # Select a broad set of rules
ignore = ["D100", "D104", "D107", "D203", "D212", "D415"] # Ignore specific rules (adjust as needed)

[tool.mypy]
python_version = "3.9"
warnings = true
pretty = true
show_column_numbers = true
show_error_codes = true

# Strict mode recommended, but can be tuned
strict = true
# Optional settings (if strict=false)
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# disallow_untyped_calls = true
